# fastapi_otel_prometheus_grafana_poc

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
configuration/manually_instrumented_fastapi_service/: development.env
documentation_assets/: service_architecture.mmd
fastapiService/: Dockerfile  pyproject.toml
fastapiService/fastapiservice/: app.py
manually_instrumented_fastapi_service/: .dockerignore  Dockerfile  manage.py  pyproject.toml
manually_instrumented_fastapi_service/fastapiservice/: app.py
manually_instrumented_fastapi_service/fastapiservice/api/routes/: dummy_routes.py  throttle_optimization.py
manually_instrumented_fastapi_service/fastapiservice/api/v1/routes/: dummy_routes.py  throttle_optimization.py
manually_instrumented_fastapi_service/fastapiservice/telemetry_instrumentation/: alert_metric_middleware.py  fastapi_hooks.py  fastapi_setup.py  otel.py
otel_collector/: otel-collector-config.yaml
prometheus/: prometheus.yml
tempo/: tempo.yaml
